--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@clerk/clerk-react": "^5.11.0",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
